Got into a good state with the game and visualization. Set up for teaching AI

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,34 +1,218 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AI To Play Mine Sweeper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Game Object\n",
+    "\n",
+    "I developed the pythonic minesweeper. It is unit tested fairly throughly; up until visualizations and tracking features of the project present themselves. Note: The 9's are bombs; because it is impossible for a cell to be sourounded by more Bombs then there are cells surronding it."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "No module named 'MinesweeperAI'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-7ac46a4a37f9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mMinesweeperAI\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMinesweeper\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgame\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m: No module named 'MinesweeperAI'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 \t9.0 \t1.0 \t0.0 \t0.0 \t1.0 \t1.0 \t2.0 \t9.0 \t2.0 \t1.0 \t0.0 \t1.0 \t9.0 \t\n",
+      "\n",
+      "2.0 \t2.0 \t3.0 \t2.0 \t2.0 \t2.0 \t9.0 \t2.0 \t2.0 \t9.0 \t1.0 \t1.0 \t2.0 \t2.0 \t\n",
+      "\n",
+      "1.0 \t9.0 \t2.0 \t9.0 \t9.0 \t3.0 \t2.0 \t2.0 \t1.0 \t1.0 \t1.0 \t1.0 \t9.0 \t1.0 \t\n",
+      "\n",
+      "1.0 \t1.0 \t2.0 \t2.0 \t2.0 \t3.0 \t9.0 \t2.0 \t0.0 \t1.0 \t1.0 \t2.0 \t1.0 \t1.0 \t\n",
+      "\n",
+      "1.0 \t2.0 \t2.0 \t2.0 \t1.0 \t2.0 \t9.0 \t3.0 \t1.0 \t2.0 \t9.0 \t1.0 \t0.0 \t0.0 \t\n",
+      "\n",
+      "9.0 \t3.0 \t9.0 \t9.0 \t2.0 \t2.0 \t2.0 \t2.0 \t9.0 \t2.0 \t2.0 \t3.0 \t2.0 \t1.0 \t\n",
+      "\n",
+      "1.0 \t4.0 \t9.0 \t4.0 \t2.0 \t9.0 \t2.0 \t3.0 \t3.0 \t2.0 \t2.0 \t9.0 \t9.0 \t2.0 \t\n",
+      "\n",
+      "0.0 \t2.0 \t9.0 \t2.0 \t1.0 \t1.0 \t2.0 \t9.0 \t9.0 \t1.0 \t2.0 \t9.0 \t9.0 \t2.0 \t\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "from MinesweeperAI.Minesweeper import game"
+    "mygame = game.minesweeper(14, 8, 25)\n",
+    "\n",
+    "\n",
+    "for row in mygame.board:\n",
+    "    for c in row:\n",
+    "        print(c, \"\\t\", end=\"\")\n",
+    "    print(\"\\n\")\n",
+    "#mygame.clickCell((0,0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing the Game\n",
+    "\n",
+    "The following is a rough gui for the game. Feel free to mess around; when you loose all of the cells will disable and you will be alerted. When you win you will be alerted. Note: If you want to start a new game you will have to run the cell above because you need to make a new object to start over"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a5455a656682404dacb6229440083ee5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(layout=Layout(height='30px', padding='0px', width='30px'), style=ButtonStyle(button_colo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d4d020cf1b5b4496b105dbe1b7e9be22",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(layout=Layout(height='30px', padding='0px', width='30px'), style=ButtonStyle(button_colo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec597d528ce443dea79e43eaa7bc692e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(layout=Layout(height='30px', padding='0px', width='30px'), style=ButtonStyle(button_colo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6516b72b5091401d8efc96bc946d387e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(layout=Layout(height='30px', padding='0px', width='30px'), style=ButtonStyle(button_colo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1479a34770874bd2a040c6cd22ebb469",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(layout=Layout(height='30px', padding='0px', width='30px'), style=ButtonStyle(button_colo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1d003ec9c8814b129f05c41c4cac5f16",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(layout=Layout(height='30px', padding='0px', width='30px'), style=ButtonStyle(button_colo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3e52660004194ffd91e3a92773bd6e82",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(layout=Layout(height='30px', padding='0px', width='30px'), style=ButtonStyle(button_colo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "515f951dd64d4792947be4d50644675e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(layout=Layout(height='30px', padding='0px', width='30px'), style=ButtonStyle(button_colo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mygame.playOnNoteBook()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Neruel Network to Play Mine Sweeper"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -49,9 +233,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
